--- a/LibraryMvcApp/Views/AdminBooks/Create.cshtml
+++ b/LibraryMvcApp/Views/AdminBooks/Create.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
     ViewBag.Title = "Add New Book";
 }
+<a asp-controller="Folder"
+   asp-action="Index"
+   asp-route-id="@ViewBag.FolderId"
+   class="btn btn-secondary">
+    <i class="fas fa-arrow-left me-1"></i>
+    Back to Folder
+</a>
 
 <div class="page-header">
     <h2><i class="fas fa-plus-circle me-2"></i>Add New Book</h2>
