--- a/LibraryMvcApp/Views/AdminBooks/Edit.cshtml
+++ b/LibraryMvcApp/Views/AdminBooks/Edit.cshtml
@@ -6,7 +6,10 @@
 
 <div class="form-container">
     <form asp-action="Edit" method="post" enctype="multipart/form-data">
+
         <input type="hidden" name="id" value="@Model.Id" />
+        <input type="hidden" name="folderId" value="@ViewBag.FolderId" />
+
 
         <div class="mb-4">
             <label class="form-label"><i class="fas fa-heading me-2"></i>Title</label>
