--- a/LibraryMvcApp/Views/Account/Login.cshtml
+++ b/LibraryMvcApp/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model LibraryMvcApp.Models.LoginViewModel
+﻿@using LibraryMvcApp.ViewModels
+@model LoginViewModel
 
 <h2>Admin Login</h2>
 <hr />
