--- a/LibraryMvcApp/Views/Folder/_SearchResult.cshtml
+++ b/LibraryMvcApp/Views/Folder/_SearchResult.cshtml
@@ -1,4 +1,5 @@
-﻿@model LibraryMvcApp.Models.SearchViewModel
+﻿@using LibraryMvcApp.ViewModels
+@model SearchViewModel
 
 @if (!Model.Folders.Any() && !Model.Books.Any())
 {
